# OtusCppPro

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
homework01/: CMakeLists.txt
homework01/.github/workflows/: release.yml
homework01/gtests/: CMakeLists.txt
homework02/: CMakeLists.txt  address.cpp  address.hpp  main.cpp  test
homework02/gtests/: CMakeLists.txt  test_address.cpp  test_main.cpp
